force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/Calculation_Details__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Details__c</fullName>
    <description>test</description>
    <formula>leaseworks__Assembly_Utilization__r.leaseworks__Y_Hidden_FH_String__c</formula>
    <label>Calculation Details</label>
    <type>Text</type>
</CustomField>