force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Adjusted__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Adjusted__c</fullName>
    <description>This checkbox will be autochecked by the system upon making any amount adjustments to this invoice line record</description>
    <formula>leaseworks__Invoice__r.leaseworks__Adjusted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This checkbox will be autochecked by the system upon making any amount adjustments to this invoice line record</inlineHelpText>
    <label>Adjusted</label>
    <type>Checkbox</type>
</CustomField>