force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Due__c</fullName>
    <description>Amount Due($)</description>
    <inlineHelpText>Amount of Invoice Line before any adjustments</inlineHelpText>
    <label>Invoice Line Amount($)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>