force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Assembly_MR_Info__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_MR_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>