force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Assembly_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_Utilization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplemental Rent Utilization</label>
    <referenceTo>leaseworks__Utilization_Report_List_Item__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>