force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Company__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company__c</fullName>
    <description>Lessor information from the associated lease</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;  leaseworks__Invoice__r.leaseworks__Lease__r.leaseworks__Lesor__c ,leaseworks__Invoice__r.leaseworks__Lease__r.leaseworks__Lesor__r.Name , &quot;_blank&quot;)</formula>
    <inlineHelpText>Lessor information from the associated lease</inlineHelpText>
    <label>Company</label>
    <type>Text</type>
</CustomField>