force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Converted_Currency_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Converted_Currency_Line_Amount__c</fullName>
    <description>This field will be calculated only when the exchange rate information is available.</description>
    <formula>if(  leaseworks__Invoice__r.leaseworks__Exchange_Rate__c != 0 , leaseworks__Total_Line_Amount__c *leaseworks__Invoice__r.leaseworks__Exchange_Rate__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field displays the invoice line amount in foreign currency based on the exchange rate entered.</inlineHelpText>
    <label>Converted Currency Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>