force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Fee_Slip_Line_item__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fee_Slip_Line_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the fee slip item record related to this invoice line item .</description>
    <inlineHelpText>Indicates the fee slip item record related to this invoice line item .</inlineHelpText>
    <label>Fee Slip Line Item</label>
    <referenceTo>leaseworks__Fee_Slip_Line__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>