force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Flight_Cycles_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Flight_Cycles_FC__c</fullName>
    <formula>if(isblank( leaseworks__Y_Hidden_Flight_Cycles_FC__c ),leaseworks__Assembly_Utilization__r.leaseworks__Cycles_During_Month__c,leaseworks__Y_Hidden_Flight_Cycles_FC__c)</formula>
    <label>Flight Cycles (FC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>