force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Date__c</fullName>
    <formula>leaseworks__Invoice__r.leaseworks__Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Invoice Date</label>
    <type>Date</type>
</CustomField>