force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Invoice_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Line_Type__c</fullName>
    <description>The Invoice Line Type categorizes the revenue and drives the journal entry credits for accounting.</description>
    <inlineHelpText>The Invoice Line Type categorizes the revenue and drives the journal entry credits for accounting.</inlineHelpText>
    <label>Invoice Line Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Invoice_Type_Dependent__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Rebate Rental</fullName>
            </value>
            <value>
                <fullName>PBH-Power by the Hour</fullName>
            </value>
            <value>
                <fullName>JCT MR</fullName>
            </value>
            <value>
                <fullName>JCT Rental</fullName>
            </value>
            <value>
                <fullName>Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Non MR</fullName>
            </value>
            <value>
                <fullName>Deferred - Rent</fullName>
            </value>
            <value>
                <fullName>Deferred - MR</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>PBH Rent Adjustment</fullName>
            </value>
            <value>
                <fullName>PBH Assembly Rent</fullName>
            </value>
            <value>
                <fullName>PBH Fixed Rent</fullName>
            </value>
            <value>
                <fullName>PBH Total Adjustment</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Fixed Rent</fullName>
            </value>
            <value>
                <fullName>Floating Rent</fullName>
            </value>
            <value>
                <fullName>Seasonal Rent</fullName>
            </value>
            <value>
                <fullName>Manual Rent</fullName>
            </value>
            <value>
                <fullName>Gross Up Amount</fullName>
            </value>
            <value>
                <fullName>Withholding Tax</fullName>
            </value>
            <value>
                <fullName>Loan Agent Fee</fullName>
            </value>
            <value>
                <fullName>Loan Bank Charges</fullName>
            </value>
            <value>
                <fullName>Loan Tax</fullName>
            </value>
            <value>
                <fullName>Loan Other Costs</fullName>
            </value>
            <value>
                <fullName>Loan Principal</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
            <value>
                <fullName>Security Deposit - MR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>