force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Status__c</fullName>
    <description>Indicates the Approval Status of the parent invoice</description>
    <formula>TEXT(leaseworks__Invoice__r.leaseworks__Status__c)</formula>
    <inlineHelpText>Indicates the Approval Status of the parent invoice</inlineHelpText>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>