force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Type__c</fullName>
    <description>Indicates type of the invoice</description>
    <formula>TEXT(leaseworks__Invoice__r.leaseworks__Invoice_Type__c)</formula>
    <inlineHelpText>Indicates type of the invoice</inlineHelpText>
    <label>Invoice Type</label>
    <type>Text</type>
</CustomField>