force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Line_Amount_Balance_Due_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Line_Amount_Balance_Due_Number__c</fullName>
    <description>Balance due on invoice line item after Payment is applied. Amount Due- Sum of all payment line item for that Invoice Line item. Used when multi-currency is enabled.</description>
    <formula>leaseworks__Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance due on invoice line item after Payment is applied. Amount Due- Sum of all payment line item for that Invoice Line item. Used when multi-currency is enabled.</inlineHelpText>
    <label>Line Amount Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>