force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Line_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Line_Currency__c</fullName>
    <description>Represents the currency to be displayed on the line item.</description>
    <formula>TEXT(leaseworks__Invoice__r.leaseworks__Transaction_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the currency to be displayed on the line item.</inlineHelpText>
    <label>Line Currency</label>
    <type>Text</type>
</CustomField>