force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__MR_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Reconciled__c</fullName>
    <label>MR Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>