force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Payment_Listings__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Listings__c</fullName>
    <description>All payment line items against the Invoice Line Item along with their associated date are listed here.</description>
    <inlineHelpText>All payment line items against the Invoice Line Item along with their associated date are listed here.</inlineHelpText>
    <label>Payment Listings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>