force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__PBH_Rent_Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Rent_Assembly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBH Rent Assembly</label>
    <referenceTo>leaseworks__PBH_Rent_Per_Assembly__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>