force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Provisional_Date_LineItem__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Provisional_Date_LineItem__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2404 Provision Date</label>
    <type>Date</type>
</CustomField>