force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Provisional_FH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Provisional_FH__c</fullName>
    <formula>leaseworks__Assembly_Utilization__r.leaseworks__Provisional_FH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisional FH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>