force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate__c</fullName>
    <label>Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>