force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Rate_Basis__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Basis__c</fullName>
    <label>Rate Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Cycles</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>APU H</fullName>
            </value>
            <value>
                <fullName>APU C</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>