force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Rent_Slip_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Slip_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rent Slip Line Item</label>
    <referenceTo>leaseworks__Rent_Slip_Line_Item__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>