force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <formula>TEXT( leaseworks__Invoice__r.leaseworks__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2103 Status</label>
    <type>Text</type>
</CustomField>