force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Amount_Paid__c</fullName>
    <description>This field is used for internal calculation- sum of all Paid Amount for the Invoice Line Item</description>
    <label>Line Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>