force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Total_Deferred_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Deferred_Line_Amount__c</fullName>
    <description>Sum of all the invoice Line amount due field across all Sub invoices</description>
    <label>_Total Deferred Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>