force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Total_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Line_Amount__c</fullName>
    <description>Displays Line Amount + any approved line adjustments</description>
    <formula>leaseworks__Amount_Due__c +  leaseworks__Total_Adjustment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays Line Amount + any approved line adjustments</inlineHelpText>
    <label>Total Line Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>