force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization__c</fullName>
    <label>Utilization</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>