force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/leaseworks__Y_Hidden_Report_Item_Subtype__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Report_Item_Subtype__c</fullName>
    <label>Z_Unused 2006 Report_Item_Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>