force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/fields/Y_Hidden_Amount_Bef_Round_Local__c.field-meta.xml
<CustomField>
    <fullName>Y_Hidden_Amount_Bef_Round_Local__c</fullName>
    <label>Z_Unused_2507 {Amount Before Rounding}</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>