force-app/main/default/objects/leaseworks__Invoice_Line_Item__c/recordTypes/leaseworks__Rent.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Rent</fullName>
    <active>true</active>
    <label>Non MR</label>
</RecordType>